# becompose

./: AGENT.md  AGENTS.md  Cargo.toml  README.md
becompose/: Cargo.toml
becompose/src/: lib.rs
becompose/src/bevy_integration/: app.rs  composables.rs  entity_bridge.rs  input_bridge.rs  mod.rs  plugin.rs  ui_builder.rs
becompose/src/bevy_integration/material_ui/: button.rs  card.rs  checkbox.rs  chip.rs  dialog.rs  divider.rs  fab.rs  icon_button.rs  list.rs  menu.rs  mod.rs  progress.rs  radio.rs  select.rs  slider.rs  snackbar.rs  switch.rs  tabs.rs  text_field.rs  tooltip.rs
becompose/src/components/: button.rs  containers.rs  image.rs  layouts.rs  mod.rs  spacer.rs  text.rs
becompose/src/composition/: context.rs  mod.rs  recomposition.rs  reconciler.rs  tree.rs
becompose/src/layout/: arrangement.rs  constraints.rs  layouts.rs  mod.rs
becompose/src/modifier/: chain.rs  draw_modifiers.rs  input_modifiers.rs  layout_modifiers.rs  mod.rs
becompose/src/state/: derived_state.rs  effects.rs  mod.rs  mutable_state.rs  remember.rs  slot.rs
becompose_macros/: Cargo.toml
becompose_macros/src/: lib.rs
docs/: DESIGN.md  PRD.md
examples/counter/: Cargo.toml  main.rs
examples/hello_world/: Cargo.toml  main.rs
examples/showcase/: Cargo.toml  README.md  index.html  main.rs  server.rs
examples/todo_app/: Cargo.toml  main.rs
