[package]
name = "showcase"
version = "0.1.0"
edition = "2021"


[[bin]]
name = "showcase"
path = "main.rs"

[[bin]]
name = "server"
path = "server.rs"

[dependencies]

becompose = { path = "../../becompose" }
bevy = { version = "0.15", default-features = false, features = [
  "webgl2",
] }
console_error_panic_hook = "0.1.6"
wasm-bindgen = "0.2"
tiny_http = "0.12"

[features]
default = []
web = []